Kderusso/xsearch endpoint (#90852)
Adds an `_xsearch` endpoint for use with SearchEngines