@@ -41,6 +41,10 @@ import org.elasticsearch.xpack.relevancesearch.query.RelevanceMatchQueryRewriter
 import org.elasticsearch.xpack.relevancesearch.settings.curations.CurationsService;
 import org.elasticsearch.xpack.relevancesearch.settings.index.IndexCreationService;
 import org.elasticsearch.xpack.relevancesearch.settings.relevance.RelevanceSettingsService;
+import org.elasticsearch.xpack.relevancesearch.xsearch.XSearchRequestValidationService;
+import org.elasticsearch.xpack.relevancesearch.xsearch.action.XSearchAction;
+import org.elasticsearch.xpack.relevancesearch.xsearch.action.XSearchTransportAction;
+import org.elasticsearch.xpack.relevancesearch.xsearch.action.rest.RestXSearchAction;
 
 import java.util.Collection;
 import java.util.Collections;
@@ -58,6 +62,8 @@ public class RelevanceSearchPlugin extends Plugin implements ActionPlugin, Searc
     private final SetOnce<RelevanceMatchQueryRewriter> relevanceMatchQueryRewriter = new SetOnce<>();
     private final SetOnce<IndexCreationService> indexCreationService = new SetOnce<>();
 
+    private final SetOnce<XSearchRequestValidationService> xSearchRequestValidationService = new SetOnce<>();
+
     @Override
     public List<RestHandler> getRestHandlers(
         final Settings settings,
@@ -68,15 +74,12 @@ public class RelevanceSearchPlugin extends Plugin implements ActionPlugin, Searc
         final IndexNameExpressionResolver indexNameExpressionResolver,
         final Supplier<DiscoveryNodes> nodesInCluster
     ) {
-
-        // Register REST handlers here
-        return Collections.emptyList();
+        return List.of(new RestXSearchAction(relevanceMatchQueryRewriter.get(), xSearchRequestValidationService.get()));
     }
 
     @Override
     public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
-        // Register actions here
-        return Collections.emptyList();
+        return List.of(new ActionPlugin.ActionHandler<>(XSearchAction.INSTANCE, XSearchTransportAction.class));
     }
 
     @Override
@@ -108,6 +111,7 @@ public class RelevanceSearchPlugin extends Plugin implements ActionPlugin, Searc
     ) {
 
         indexCreationService.set(new IndexCreationService(client, clusterService));
+        xSearchRequestValidationService.set(new XSearchRequestValidationService(indexNameExpressionResolver, clusterService));
         RelevanceSettingsService relevanceSettingsService = new RelevanceSettingsService(client);
         CurationsService curationsService = new CurationsService(client);
         QueryFieldsResolver queryFieldsResolver = new QueryFieldsResolver();
@@ -116,6 +120,6 @@ public class RelevanceSearchPlugin extends Plugin implements ActionPlugin, Searc
             new RelevanceMatchQueryRewriter(clusterService, relevanceSettingsService, curationsService, queryFieldsResolver)
         );
 
-        return List.of(relevanceMatchQueryRewriter.get(), indexCreationService.get());
+        return List.of(relevanceMatchQueryRewriter.get(), indexCreationService.get(), xSearchRequestValidationService.get());
     }
 }
